Updated local Admin Email

--- a/src/.env.example
+++ b/src/.env.example
@@ -13,7 +13,7 @@ AZURE_OPENAI_API_VERSION=2023-03-15-preview
 AZURE_OPENAI_API_EMBEDDINGS_DEPLOYMENT_NAME=
 
 # Update your admin email addresses - comma separated
-ADMIN_EMAIL_ADDRESS="you@email.com,you2@email.com"
+ADMIN_EMAIL_ADDRESS="jsteen@uab.edu"
 
 # Identity provider is optional if you are running in development mode locally (npm run dev)
 AUTH_GITHUB_ID=
